--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
-
-    <style>
-      body {
-        background: #000;
-        color: white;
-      }
-    </style>
   </head>
   <body>
     <header class="header">
@@ -23,6 +17,7 @@
     <main class="main">
       <section class="hero">
         <div class="container">
+          <h1 class="visually-hidden">Сериал от nextix Легетда от аватаре</h1>
           <img class="hero__banner" src="./img/description.png" alt="" />
 
           <p class="hero__date">
@@ -47,21 +42,31 @@
         </div>
       </section>
       <section class="about" id="about">
-        <div class="container">
-          <h2 class="aboout__title">Аватар: Легенда об Аанге</h2>
-          <p class="about__decription">
-            Сюжет рассказывает о мальчике из племени воздушных кочевников,
-            Аанге, способном покорять стихию воздуха. В возрасте 11 лет,
-            он узнал, что он Аватар — властелин четырёх стихий. Мир погряз
-            в многолетней войне нации Огня против остального мира, в котором
-            определённые люди способны покорять одну из четырёх стихий — воду,
-            землю, огонь или воздух. Аанг — единственный, кто способен покорить
-            все элементы и будучи Аватаром, он должен спасти мир от уничтожения
-            нацией Огня. Со своими новыми друзьями, Катарой и Соккой, Аанг
-            отправляется овладевать стихиями, попутно их преследует изгнанный
-            принц нации Огня — Зуко, который хочет вернуть себе честь, поймав
-            Аватара.
-          </p>
+        <div class="container about__container">
+          <div class="about__content">
+            <h2 class="aboout__title">Аватар: Легенда об Аанге</h2>
+            <p class="about__decription">
+              Сюжет рассказывает о мальчике из племени воздушных кочевников,
+              Аанге, способном покорять стихию воздуха. В возрасте 11 лет,
+              он узнал, что он Аватар — властелин четырёх стихий. Мир погряз
+              в многолетней войне нации Огня против остального мира, в котором
+              определённые люди способны покорять одну из четырёх стихий — воду,
+              землю, огонь или воздух. Аанг — единственный, кто способен
+              покорить все элементы и будучи Аватаром, он должен спасти мир
+              от уничтожения нацией Огня. Со своими новыми друзьями, Катарой
+              и Соккой, Аанг отправляется овладевать стихиями, попутно
+              их преследует изгнанный принц нации Огня — Зуко, который хочет
+              вернуть себе честь, поймав Аватара.
+            </p>
+          </div>
+          <!-- /.about__content -->
+
+          <picture class="about__pic">
+            <source srcset="./img/ang1024.jpg" media="(max-width:1024px)" />
+            <source srcset="./img/ang769.jpg" media="(max-width:769px)" />
+            <source srcset="./img/ang320.jpg" media="(max-width:320px)" />
+            <img class="about__img" src="./img/about.jpg" alt="" />
+          </picture>
         </div>
       </section>
       <section id="trailers" class="trailers">
@@ -69,9 +74,14 @@
           <ul class="trailers__buttons">
             <li class="trailers__item--button">
               <button class="trailer__button trailer__button--active">
-                трейлер 1</button
-              ><button class="trailer__button">трейлер 2</button
-              ><button class="trailer__button">трейлер 3</button>
+                трейлер 1
+              </button>
+            </li>
+            <li class="trailers__item--button">
+              <button class="trailer__button">трейлер 2</button>
+            </li>
+            <li class="trailers__item--button">
+              <button class="trailer__button">трейлер 3</button>
             </li>
           </ul>
 
